updating our details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>Currently dad to a 10 month old puppy, soon to be dad to a newborn human</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Colorado</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Reading, Jiu Jitsu</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Philanthropy after winning the lottery</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Denver</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>Expand my skill set</p>
     </section>
 
     <footer id="footer">
